--- a/src/CG.Business/CG.Business.csproj
+++ b/src/CG.Business/CG.Business.csproj
@@ -25,6 +25,10 @@ Platforms supported:
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Repositories\RepositoryBase.cs~RF6e2350.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CG.Core" Version="2020.6.41" />
     <PackageReference Include="CG.Options" Version="2020.1.16" />
     <PackageReference Include="CG.Reflection" Version="2020.1.11" />
@@ -32,6 +36,7 @@ Platforms supported:
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
